--- a/schedule.html
+++ b/schedule.html
@@ -78,13 +78,13 @@
               <td>
                 <a href="speakers.html#adam-connor">
                   <h4>Adam Connor</h4>
-                  Lights! Camera! Interaction! Design Inspiration from Filmmakers
+                  <div class="info">Lights! Camera! Interaction! Design Inspiration from Filmmakers</div>
                 </a>
               </td>
               <td>
                 <a href="speakers.html#jennifer-jones">
                   <h4>Jennifer Jones</h4>
-                  What Designers Can Learn from Parenting
+                  <div class="info">What Designers Can Learn from Parenting</div>
                 </a>
               </td>
             </tr>
@@ -103,13 +103,13 @@
               <td>
                 <a href="speakers.html#tessa-harmon">
                   <h4>Tessa Harmon</h4>
-                  Crafty Coding: Generating Knitting Patterns
+                  <div class="info">Crafty Coding: Generating Knitting Patterns</div>
                 </a>
               </td>
               <td>
                 <a href="speakers.html#russ-unger">
                   <h4>Russ Unger</h4>
-                  From Muppets to Mastery: Core UX Principles from Mr. Jim Henson
+                  <div class="info">From Muppets to Mastery: Core UX Principles from Mr. Jim Henson</div>
                 </a>
               </td>
             </tr>
@@ -145,7 +145,7 @@
               <td colspan="2">
                 <a href="speakers.html#vitaly-friedman">
                   <h4>Vitaly Friedman</h4>
-                  Responsive Web Design: Clever Tips and Techniques
+                  <div class="info">Responsive Web Design: Clever Tips and Techniques</div>
                 </a>
               </td>
             </tr>
@@ -164,13 +164,13 @@
               <td>
                 <a href="speakers.html#shay-howe">
                   <h4>Shay Howe</h4>
-                  Less is More: How Constraints Cultivate Growth
+                  <div class="info">Less is More: How Constraints Cultivate Growth</div>
                 </a>
               </td>
               <td>
                 <a href="speakers.html#jenn-downs">
                   <h4>Jenn Downs</h4>
-                  What&#8217;s Stopping You?
+                  <div class="info">What&#8217;s Stopping You?</div>
                 </a>
               </td>
             </tr>
@@ -181,13 +181,13 @@
               <td>
                 <a href="speakers.html#carolyn-chandler">
                   <h4>Carolyn Chandler</h4>
-                  The Business of Play
+                  <div class="info">The Business of Play</div>
                 </a>
               </td>
               <td>
                 <a href="speakers.html#chris-mills">
                   <h4>Chris Mills</h4>
-                  Heavy Metal Coding
+                  <div class="info">Heavy Metal Coding</div>
                 </a>
               </td>
             </tr>
@@ -206,13 +206,13 @@
               <td>
                 <a href="speakers.html#zoe-mickley-gillenwater">
                   <h4>Zoe Mickley Gillenwater</h4>
-                  Leveling Up with Flexbox
+                  <div class="info">Leveling Up with Flexbox</div>
                 </a>
               </td>
               <td>
                 <a href="speakers.html#darby-frey">
                   <h4>Darby Frey</h4>
-                  Building a Mobile Layout
+                  <div class="info">Building a Mobile Layout</div>
                 </a>
               </td>
             </tr>
@@ -223,13 +223,13 @@
               <td>
                 <a href="speakers.html#brad-smith">
                   <h4>Brad Smith</h4>
-                  What Designers and Strategists Can Learn from Dick Fosbury
+                  <div class="info">What Designers and Strategists Can Learn from Dick Fosbury</div>
                 </a>
               </td>
               <td>
                 <a href="speakers.html#erica-decker">
                   <h4>Erica Decker</h4>
-                  What Disney Can Teach You about User Experience Design
+                  <div class="info">What Disney Can Teach You about User Experience Design</div>
                 </a>
               </td>
             </tr>
@@ -248,7 +248,7 @@
               <td colspan="2">
                 <a href="speakers.html#estelle-weyl">
                   <h4>Estelle Weyl</h4>
-                  Select This!
+                 <div class="info"> Select This!</div>
                 </a>
               </td>
             </tr>
@@ -284,7 +284,7 @@
               <td colspan="2">
                 <a href="speakers.html#aaron-irizarry">
                   <h4>Aaron Irizarry</h4>
-                  Designing a Culture of Design
+                  <div class="info">Designing a Culture of Design</div>
                 </a>
               </td>
             </tr>
@@ -303,13 +303,13 @@
               <td>
                 <a href="speakers.html#jen-myers">
                   <h4>Jen Myers</h4>
-                  Teaching Our CSS to Play Nice
+                  <div class="info">Teaching Our CSS to Play Nice</div>
                 </a>
               </td>
               <td>
                 <a href="speakers.html#aj-self">
                   <h4>AJ Self</h4>
-                  (You Should Be) Testing Your JavaScript
+                  <div class="info">(You Should Be) Testing Your JavaScript</div>
                 </a>
               </td>
             </tr>
@@ -320,13 +320,13 @@
               <td>
                 <a href="speakers.html#dan-denney">
                   <h4>Dan Denney</h4>
-                  Creating HTML Emails Can Be Fun
+                  <div class="info">Creating HTML Emails Can Be Fun</div>
                 </a>
               </td>
               <td>
                 <a href="speakers.html#maya-bruck">
                   <h4>Maya Bruck</h4>
-                  So You Want to Be a Unicorn
+                  <div class="info">So You Want to Be a Unicorn</div>
                 </a>
               </td>
             </tr>
@@ -345,13 +345,13 @@
               <td>
                 <a href="speakers.html#victoria-pater">
                   <h4>Victoria Pater</h4>
-                  Excellent Tacos Are Not Created in a Vacuum
+                  <div class="info">Excellent Tacos Are Not Created in a Vacuum</div>
                 </a>
               </td>
               <td>
                 <a href="speakers.html#arman-ghosh">
                   <h4>Arman Ghosh</h4>
-                  Designing Deals: How Good Design Drives Sales
+                  <div class="info">Designing Deals: How Good Design Drives Sales</div>
                 </a>
               </td>
             </tr>
@@ -362,13 +362,13 @@
               <td>
                 <a href="speakers.html#bermon-painter">
                   <h4>Bermon Painter</h4>
-                  Death to Wireframes: Long Live Rapid Prototyping
+                  <div class="info">Death to Wireframes: Long Live Rapid Prototyping</div>
                 </a>
               </td>
               <td>
                 <a href="speakers.html#candi-lemoine">
                   <h4>Candi Lemoine</h4>
-                  Making Remote Development Work
+                  <div class="info">Making Remote Development Work</div>
                 </a>
               </td>
             </tr>
@@ -387,7 +387,7 @@
               <td colspan="2">
                 <a href="speakers.html#leslie-jensen-inman">
                   <h4>Dr. Leslie Jensen-Inman</h4>
-                  Designing to Learn
+                  <div class="info">Designing to Learn</div>
                 </a>
               </td>
             </tr>
