--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<title>Styles</title>
 
-    <meta name="viewport" content="width=device-width, minimumscale=1.0, maximum-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
    <link rel="stylesheet"
