responive dropdown menu

--- a/venue.html
+++ b/venue.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  
     <title>Venue - Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
@@ -23,7 +23,9 @@
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
       <nav class="nav primary-nav">
-        <ul>
+         <label for="show-menu" class="show-menu">Show Menu</label>
+          <input type="checkbox" id="show-menu" role="button">
+            <ul id="menu">
           <li><a href="index.html">Home</a></li><!--
           --><li><a href="speakers.html">Speakers</a></li><!--
           --><li><a href="schedule.html">Schedule</a></li><!--
