--- a/speakers.html
+++ b/speakers.html
@@ -22,7 +22,9 @@
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
       <nav class="nav primary-nav">
-        <ul>
+         <label for="show-menu" class="show-menu">Show Menu</label>
+          <input type="checkbox" id="show-menu" role="button">
+            <ul id="menu">
           <li><a href="index.html">Home</a></li><!--
           --><li><a href="speakers.html">Speakers</a></li><!--
           --><li><a href="schedule.html">Schedule</a></li><!--
