--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+   <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
-   <link rel="stylesheet"
-  href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
+  
 </head>
 
     <body>
