--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel ="stylesheet" type ="text/css" href="assets/fonts/fonts.css">
+
    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
   
