--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     	   <nav class ="nav primary-nav">
 
-           <label for="show-menu" class="show-menu">Show Menu</label>
+           <label for="show-menu" class="show-menu">Menu</label>
           <input type="checkbox" id="show-menu" role="button">
             <ul id="menu">
                 <li><a href="index.html">Home</a></li><!--
