--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
       <nav class="nav primary-nav">
-         <label for="show-menu" class="show-menu">Show Menu</label>
+         <label for="show-menu" class="show-menu">Menu</label>
           <input type="checkbox" id="show-menu" role="button">
           <ul id="menu">
           <li><a href="index.html">Home</a></li><!--
