back to top slower

--- a/speakers.html
+++ b/speakers.html
@@ -815,7 +815,7 @@
 // create the back to top button
 $('.primary-footer').prepend('<a href="#" class="back-to-top">Back to Top</a>');
 
-var amountScrolled = 300;
+var amountScrolled = 600;
 
 $(window).scroll(function() {
   if ($(window).scrollTop() > amountScrolled) {
@@ -828,7 +828,7 @@ $(window).scroll(function() {
 $('a.back-to-top').click(function() {
   $('body').animate({
     scrollTop: 0
-  }, 'fast');
+  }, 'slow');
   return false;
 });
 </script>
