vertcial space mobile

--- a/schedule.html
+++ b/schedule.html
@@ -25,6 +25,8 @@
         <a href="index.html">Styles <br> Conference</a>
       </h1>
 
+      <!--<button class="light">Switch</button>-->
+
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
       <nav class="nav primary-nav">
