--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     	   	 <a href="index.html">Styles <br> Conference</a>
     	   </h1>
 
+        <!-- <button class="light">Switch</button>-->
+
     	   <h3 class ="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
           
         
