swicth stylesheets and use cookie to remember across site : FAIL

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +13,8 @@
     <link rel ="stylesheet" type ="text/css" href="assets/fonts/fonts.css">
 
    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
+	<link rel="stylesheet" type="text/css" href="assets/stylesheets/dark.css">
+
 
  
   
@@ -28,7 +30,7 @@
     	   	 <a href="index.html">Styles <br> Conference</a>
     	   </h1>
 
-        <!-- <button class="light">Switch</button>-->
+          <div id="contrast-btn"><a href="#" rel="assets/stylesheets/light.css">SWITCH</a></div>
 
     	   <h3 class ="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
           
@@ -127,6 +129,7 @@
        <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
+         <script src="assets/js/jquery.cookie.js"></script>
         <script src="assets/js/script.js"></script>
 
     	
