--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
      <link rel ="stylesheet" type ="text/css" href="assets/fonts/fonts.css">
      <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="assets/stylesheets/dark.css">
 
   
    
@@ -139,7 +139,7 @@
 
      <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-
+         <script src="assets/js/jquery.cookie.js"></script>
         <script src="assets/js/script.js"></script>
 
   </body>
