--- a/schedule.html
+++ b/schedule.html
@@ -9,7 +9,7 @@
 
      <link rel ="stylesheet" type ="text/css" href="assets/fonts/fonts.css">
      <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="assets/stylesheets/dark.css">
 
     
     
@@ -25,7 +25,7 @@
         <a href="index.html">Styles <br> Conference</a>
       </h1>
 
-      <!--<button class="light">Switch</button>-->
+      <button class="switch">Switch</button>
 
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
@@ -428,7 +428,7 @@
 
  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-
+         <script src="assets/js/jquery.cookie.js"></script>
         <script src="assets/js/script.js"></script>
 
   </body>
