--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     	   	 <a href="index.html">Styles <br> Conference</a>
     	   </h1>
 
-          <div id="contrast-btn"><a href="#" rel="assets/stylesheets/light.css">SWITCH</a></div>
+          <div id="contrast-btn"><a href="#" rel="assets/stylesheets/light.css">LIGHT SWITCH</a></div>
 
     	   <h3 class ="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
           
