--- a/register.html
+++ b/register.html
@@ -25,6 +25,8 @@
         <a href="index.html">Styles <br> Conference</a>
       </h1>
 
+       <div id="contrast-btn"><a href="#" rel="assets/stylesheets/light.css">LIGHT SWITCH</a></div>
+
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
       <nav class="nav primary-nav">
