--- a/schedule.html
+++ b/schedule.html
@@ -25,7 +25,7 @@
         <a href="index.html">Styles <br> Conference</a>
       </h1>
 
-      <button class="switch">Switch</button>
+       <div id="contrast-btn"><a href="#" rel="assets/stylesheets/light.css">LIGHT SWITCH</a></div>
 
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
