--- a/venue.html
+++ b/venue.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
      <link rel ="stylesheet" type ="text/css" href="assets/fonts/fonts.css">
      <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
+      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/stylesheets/dark.css">
 
     
@@ -26,7 +27,7 @@
         <a href="index.html">Styles <br> Conference</a>
       </h1>
 
-       <div id="contrast-btn"><a href="#" rel="assets/stylesheets/light.css">LIGHT SWITCH</a></div>
+      <div id="contrast-btn"><a href="#" rel="assets/stylesheets/light.css">LIGHT SWITCH<i class="fa fa-lightbulb-o"></i></a></div>
 
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
