--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
         <a href="index.html">Styles <br> Conference</a>
       </h1>
 
-       <div id="contrast-btn"><a href="#" rel="assets/stylesheets/light.css">LIGHT SWITCH<i class="fa fa-lightbulb-o"></i></a></div>
+       <div id="contrast-btn"><a href="#" rel="assets/stylesheets/light.css">SWITCH<i class="fa fa-lightbulb-o"></i></a></div>
 
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
