--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     	   	 <a href="index.html">Styles <br> Conference</a>
     	   </h1>
 
-          <div id="contrast-btn"><a href="#" rel="assets/stylesheets/light.css">LIGHT SWITCH<i class="fa fa-lightbulb-o"></i></a></div>
+          <div id="contrast-btn"><a href="#" rel="assets/stylesheets/light.css">SWITCH<i class="fa fa-lightbulb-o"></i></a></div>
 
           
 
